# humanoid-robot

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  compose-smoke.yaml  publish-images.yaml  release.yaml
apps/core/: README.md  pyproject.toml
apps/core/src/humanoid_robot/core/: __init__.py  __main__.py  app.py  container.py  diagnostics.py  diagnostics_ticker.py  dialogue_journal.py  event_journal.py  knowledge_service.py  plugin_manager.py  robot_manifest_cache.py  robot_telemetry_cache.py  settings.py  visit_journal.py  wall_relay.py
apps/core/src/humanoid_robot/core/api/: __init__.py  adapters.py  auth.py  diagnostics.py  dialogue.py  events.py  knowledge.py  llm.py  plugins.py  rag.py  robot.py  safety.py  settings.py  system.py  visits.py  voice.py  wall.py
apps/core/tests/: test_api_adapters.py  test_api_diagnostics.py  test_api_events.py  test_api_plugins.py  test_api_safety.py  test_api_system.py  test_auth.py  test_diagnostics.py  test_diagnostics_ticker.py  test_dialogue_journal.py  test_event_journal.py  test_knowledge_service.py  test_plugin_manager.py  test_robot_manifest_cache.py  test_settings.py  test_visit_journal.py  test_wall_relay.py
apps/ingest/: README.md  pyproject.toml
apps/ingest/src/humanoid_robot/ingest/: __init__.py  __main__.py  composition.py  orchestrator.py  settings.py
apps/ingest/tests/: test_orchestrator.py
apps/presence/: README.md  pyproject.toml
apps/presence/src/humanoid_robot/presence/: __init__.py  __main__.py  detector.py  runner.py
apps/presence/tests/: test_presence.py
apps/rag/: README.md  pyproject.toml
apps/rag/src/humanoid_robot/rag/: __init__.py  __main__.py  composition.py  conversation.py  grounded_qa.py  guard_kb.py  llm_config_sync.py  presenter_kb.py  runner.py  settings.py  visit_intake.py  wall_intent.py
apps/rag/tests/: test_conversation.py  test_grounded_qa.py  test_guard_kb.py  test_presenter_kb.py  test_runner.py  test_runner_guard.py  test_runner_wall.py  test_visit_intake.py  test_wall_intent.py
apps/robot-adapter/: README.md  pyproject.toml
apps/robot-adapter/src/humanoid_robot/robot_adapter_app/: __init__.py  __main__.py  dispatcher.py  runner.py  settings.py  telemetry_pump.py
apps/robot-adapter/tests/: test_dispatcher.py  test_g1_integration.py  test_runner.py  test_telemetry_pump.py
apps/safety/: README.md  pyproject.toml
apps/safety/src/humanoid_robot/safety/: __init__.py  audit.py  estop.py  gate.py  overheat_monitor.py  policies.py  reconciler.py  tilt_monitor.py  watchdog.py
apps/safety/tests/: test_audit.py  test_audit_rotation.py  test_end_to_end.py  test_gate.py  test_overheat_monitor.py  test_payload_schema.py  test_per_actor_rate_limit.py  test_policies.py  test_reconciler.py  test_submitter_propagation.py  test_tilt_monitor.py  test_velocity_limit.py  test_watchdog.py
apps/voice/: README.md  pyproject.toml
apps/voice/src/humanoid_robot/voice/: __init__.py  __main__.py  asr_config_sync.py  cloud_asr.py  composition.py  fallback_tts.py  runner.py  session.py  settings.py  tts_speaker.py
apps/voice/tests/: test_cloud_asr.py  test_fallback_tts.py  test_runner.py  test_session.py  test_tts_speaker.py  test_voice_g1_mic_wiring.py  test_voice_g1_wiring.py
apps/wall-agent/: README.md  pyproject.toml
apps/wall-agent/src/humanoid_robot/wall_agent/: __init__.py  __main__.py  drivers.py  server.py
apps/wall-agent/tests/: test_drivers.py  test_server.py  test_sim_driver.py
deploy/: README.md  ROBOT-BRINGUP.md  docker-compose.jetson.yaml  docker-compose.pull.yaml  docker-compose.unitree.yaml  docker-compose.yaml  nats.conf
deploy/config/: alertmanager.env.example  base.yaml  cortex-core.env.example  cortex-rag.env.example  cortex-robot-adapter.env.example  cortex-voice.env.example  guard-kb.yaml  ingest.yaml  presenter-kb.yaml  rag.yaml  voice.yaml  wall-intents.yaml
deploy/docker/: adapter-unitree.Dockerfile  base-jetson.Dockerfile  base.Dockerfile  dashboard.Dockerfile  dashboard.nginx.conf  llamacpp-cuda.Dockerfile  nats.compose.yaml
deploy/observability/: alertmanager.yml  prometheus.yml
deploy/observability/grafana/dashboards/: platform.json  provider.yaml
deploy/observability/grafana/datasources/: prometheus.yaml
deploy/observability/rules/: humanoid-robot.yml
deploy/scripts/: backup.sh  bootstrap-jetson.sh  build-unitree-adapter.sh  detect-jetson.sh  expose.sh  fetch-models.sh  gen-presenter-kb.py  install-on-robot.sh  preview-release.sh  restore.sh  verify-images.sh  verify-install.sh
deploy/systemd/: cortex-core.service  cortex-rag.service  cortex-robot-adapter.service  cortex-voice.service  humanoid-robot-backup.service  humanoid-robot-backup.timer  humanoid-robot.target
deploy/wall-agent/: README.md  mapping.example.json
docs/adr/: 0000-record-architecture-decisions.md  0001-hexagonal-ddd-event-driven.md  0002-monorepo-uv-workspaces.md  0003-nats-jetstream-event-bus.md  0004-hw-first-voice-pipeline.md  0005-ai-stack-lock-in.md  README.md
docs/runbooks/: hitl-g1.md  hitl-rag.md  hitl-voice.md
plugins/hello/: README.md  pyproject.toml
plugins/hello/src/humanoid_robot/plugins/hello/: __init__.py  plugin.py
plugins/hello/tests/: test_hello.py
scripts/: hitl_g1_smoke.py  hitl_rag_smoke.py  hitl_voice_smoke.py
web/dashboard/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
web/dashboard/src/: App.tsx  index.css  main.tsx
web/dashboard/src/api/: client.ts
web/dashboard/src/components/: CameraView.tsx  ChatPanel.tsx  ConfirmDialog.tsx  LlmSwitcher.tsx  MicMonitor.tsx  MotionButton.tsx  PushToTalk.tsx  SafetyToggle.tsx  TabBar.tsx
web/dashboard/src/lib/: authPrompt.tsx  busToasts.tsx  eventStream.tsx  labels.ts  micActivity.tsx  toast.tsx  useConversation.ts  useGestureBudget.ts  useRobotCommand.ts  useSafety.ts  useTelemetry.ts  useWallCommand.ts  watchdog.tsx
web/dashboard/src/pages/: AdaptersPage.tsx  HomePage.tsx  (+16 more)
