# ---------------------------------------------------------------------------
# humanoid-robot — root workspace configuration.
#
# This file is intentionally *not* a distributable package. It exists to:
#   - declare the uv workspace and its members (apps/*, packages/*, plugins/*)
#   - centralise tool configuration (ruff, mypy, pytest, coverage, importlinter,
#     commitizen) so every member inherits the same rules
#
# Individual workspace members (packages/*, apps/*, plugins/*) each ship their
# own `pyproject.toml` describing that distribution.
# ---------------------------------------------------------------------------

[project]
name = "humanoid-robot"
version = "0.0.0"
description = "Offline-first AI platform for autonomous humanoid robots."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "humanoid-robot contributors" }]

# The root project has no runtime dependencies — it is a metadata/workspace
# holder. Real dependencies live inside workspace members.
dependencies = []

[dependency-groups]
# Dev-only dependencies shared across the entire workspace.
dev = [
    "ruff>=0.9.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "hypothesis>=6.115.0",
    "pre-commit>=4.0.0",
    "import-linter>=2.1",
    "commitizen>=3.30",
    "types-PyYAML>=6.0",
    "httpx2>=1.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "apps/*", "plugins/*"]
exclude = ["web/**"]

# ---------------------------------------------------------------------------
# Ruff — lint + format. Replaces black, isort, flake8, autoflake, pyupgrade.
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "build", "dist", "node_modules"]

[tool.ruff.lint]
# Curated set: pycodestyle E/W, pyflakes F, isort I, pyupgrade UP, bugbear B,
# comprehensions C4, simplify SIM, typing TCH, pytest style PT, security S,
# annotations ANN, complexity C90, docstring parts D, ruff-specific RUF.
select = [
    "E", "W", "F", "I", "UP", "B", "C4", "SIM", "PT", "S",
    "ANN", "C90", "RUF", "PL", "PIE", "TRY", "PERF", "N",
]
ignore = [
    # Line length handled by formatter, not lint (avoid noisy conflicts).
    "E501",
    # Docstring rules — enable per-package as it matures, do not gate whole tree.
    "D",
    # TRY003: allow raising exceptions with descriptive messages.
    "TRY003",
    # PLR0913: too many arguments — pydantic models legitimately have many.
    "PLR0913",
    # TC001/TC002/TC003 push runtime-needed annotations into TYPE_CHECKING
    # blocks — pydantic v2 requires them at runtime, so these are disabled.
    "TC001", "TC002", "TC003",
    # PLR0402 forces `from a import b` even when `import a.b as b` is the only
    # form mypy accepts under our PEP-420 namespace package layout.
    "PLR0402",
    # PLC0415 (imports inside functions) — adapter modules deliberately import
    # optional runtime deps (numpy, onnxruntime, faster_whisper, piper,
    # silero_vad, openwakeword) lazily so the package imports cleanly on
    # laptops without those native libraries.
    "PLC0415",
]

[tool.ruff.lint.per-file-ignores]
# Tests may use assert, magic values, and long parametrise blocks.
"**/tests/**/*.py" = ["S101", "PLR2004", "ANN"]
"**/conftest.py" = ["S101", "ANN"]
# Enums often reuse names like `PASS` / `EXPIRED` — not secrets.
"**/domain/**/models.py" = ["S105"]
# `__init__.py` re-exports are naturally alphabetically-unsortable across
# subpackages; ruff isort tries to reorder them and thrash the file.
"**/__init__.py" = ["I001"]
# Typer relies on `typer.Option(...)` as function default; use of B008 is
# the standard Typer/Click idiom.
"apps/core/src/humanoid_robot/core/__main__.py" = ["B008"]
"apps/robot-adapter/src/humanoid_robot/robot_adapter_app/__main__.py" = ["B008"]
# Adapter and plugin factories must accept arbitrary kwargs by design — the
# concrete shape is defined by each adapter's own settings model.
"packages/humanoid-robot-plugins-sdk/src/humanoid_robot/plugins_sdk/registry.py" = ["ANN401"]
"packages/humanoid-robot-adapters-unitree-g1/src/humanoid_robot/adapters/unitree_g1/adapter.py" = ["ANN401"]
# Vendor SDK exposes CamelCase Python methods (SetTimeout, PlayStream, ...).
# Ports wrapping the vendor call them by their real names; matching test
# fakes mimic the same interface.
"packages/humanoid-robot-adapters-unitree-g1/src/humanoid_robot/adapters/unitree_g1/arm.py" = ["ANN401"]
"packages/humanoid-robot-adapters-unitree-g1/src/humanoid_robot/adapters/unitree_g1/audio_out.py" = ["ANN401"]
# camera_mjpeg wraps the untyped vendor VideoClient (ANN401) and its stdlib
# HTTP handler branches on route + auth (C901). mic_stream shares the same
# stdlib-HTTP-handler shape.
"packages/humanoid-robot-adapters-unitree-g1/src/humanoid_robot/adapters/unitree_g1/camera_mjpeg.py" = ["ANN401", "C901"]
"packages/humanoid-robot-adapters-unitree-g1/src/humanoid_robot/adapters/unitree_g1/mic_stream.py" = ["ANN401", "C901"]
"packages/humanoid-robot-adapters-unitree-g1/tests/test_arm.py" = ["N802"]
"packages/humanoid-robot-adapters-unitree-g1/tests/test_audio_out.py" = ["N802"]
# ASR/TTS/VAD adapters carry an injectable loader typed `Any` — the third-
# party runtime shapes are not stable across releases; the test kit uses
# minimal SimpleNamespace-like fakes.
"packages/humanoid-robot-adapters-asr-whisper/src/humanoid_robot/adapters/asr_whisper/adapter.py" = ["ANN401"]
"packages/humanoid-robot-adapters-tts-piper/src/humanoid_robot/adapters/tts_piper/adapter.py" = ["ANN401"]
"packages/humanoid-robot-adapters-vad-silero/src/humanoid_robot/adapters/vad_silero/adapter.py" = ["ANN401"]
"packages/humanoid-robot-adapters-audio-alsa/src/humanoid_robot/adapters/audio_alsa/adapter.py" = ["ANN401"]
"packages/humanoid-robot-adapters-embed-bge/src/humanoid_robot/adapters/embed_bge/adapter.py" = ["ANN401"]
"packages/humanoid-robot-adapters-rerank-bge/src/humanoid_robot/adapters/rerank_bge/adapter.py" = ["ANN401"]
"packages/humanoid-robot-adapters-vector-qdrant/src/humanoid_robot/adapters/vector_qdrant/adapter.py" = ["ANN401", "RUF100"]
"packages/humanoid-robot-adapters-parser-docling/src/humanoid_robot/adapters/parser_docling/parsers.py" = ["ANN401"]
# Russian docstrings and prompt templates trip Ruff's ambiguous-Unicode rule;
# enum reuses PASS as an intentional taxonomy name (not a password).
"apps/rag/src/humanoid_robot/rag/grounded_qa.py" = ["RUF001", "RUF002", "S105"]
"apps/rag/src/humanoid_robot/rag/conversation.py" = ["RUF001", "RUF002"]
# llm_config_sync duck-types the adapter (reconfigure is adapter-specific).
"apps/rag/src/humanoid_robot/rag/llm_config_sync.py" = ["ANN401"]
# Russian spoken-dialogue strings for the guard-desk interview.
"apps/rag/src/humanoid_robot/rag/visit_intake.py" = ["RUF001", "RUF002", "RUF003"]
"apps/rag/src/humanoid_robot/rag/runner.py" = ["RUF003"]
"apps/rag/tests/test_visit_intake.py" = ["RUF001"]
"apps/core/tests/test_visit_journal.py" = ["RUF001"]
"packages/humanoid-robot-adapters-wakeword-openwakeword/src/humanoid_robot/adapters/wakeword_openwakeword/adapter.py" = ["ANN401"]
"apps/voice/src/humanoid_robot/voice/__main__.py" = ["B008"]
"apps/voice/src/humanoid_robot/voice/composition.py" = ["ANN401"]
"apps/rag/src/humanoid_robot/rag/__main__.py" = ["B008"]
"apps/rag/src/humanoid_robot/rag/composition.py" = ["ANN401"]
"scripts/hitl_rag_smoke.py" = ["TRY300"]
"apps/ingest/src/humanoid_robot/ingest/__main__.py" = ["B008"]
"apps/ingest/src/humanoid_robot/ingest/composition.py" = ["ANN401"]
# Chunker main loop legitimately has multiple boundary conditions; splitting
# them across functions hides the sequence rather than clarifying it.
"packages/humanoid-robot-adapters-chunker-token/src/humanoid_robot/adapters/chunker_token/chunker.py" = ["C901"]
# G1 downmix path uses a small numeric constant literally; pinning it to a
# named constant hurts readability of the copy loop.
"packages/humanoid-robot-adapters-unitree-g1/src/humanoid_robot/adapters/unitree_g1/audio_in.py" = ["PLR2004"]
# Test contract-style suites use assert extensively.
"packages/humanoid-robot-adapters-audio-alsa/tests/test_alsa.py" = ["S101"]
# HITL and one-shot scripts use broad exception handling by design.
"scripts/hitl_voice_smoke.py" = ["BLE001", "RUF100", "TRY300", "TRY400"]
# Contract-test helpers legitimately use `assert` — that's their whole job.
"packages/humanoid-robot-contract-tests/src/**/*.py" = ["S101"]
# The lazy SDK cache is one variable behind a get/reset pair; a module-level
# global is the clearest expression of that pattern.
"packages/humanoid-robot-adapters-unitree-g1/src/humanoid_robot/adapters/unitree_g1/sdk.py" = ["PLW0603"]
# One-shot HITL script relies on `except Exception:` at the top level to
# guarantee the process exits with a helpful message.
"scripts/hitl_g1_smoke.py" = ["RUF100"]

[tool.ruff.lint.isort]
known-first-party = ["humanoid_robot"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

# ---------------------------------------------------------------------------
# mypy — strict typing on domain/ports/events; looser on adapters where 3rd-
# party libraries lack stubs. Per-package overrides go in each pyproject.toml.
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_decorators = true
show_error_codes = true
pretty = true
plugins = ["pydantic.mypy"]
# Workspace uses PEP-420 namespace packages under `humanoid_robot.*`.
# `mypy_path` tells mypy where each namespace root lives so it does not see the
# same file under two module paths.
namespace_packages = true
explicit_package_bases = true
mypy_path = [
    "packages/humanoid-robot-domain/src",
    "packages/humanoid-robot-events/src",
    "packages/humanoid-robot-ports/src",
    "packages/humanoid-robot-testing/src",
    "packages/humanoid-robot-adapters-nats/src",
    "packages/humanoid-robot-observability/src",
    "packages/humanoid-robot-plugins-sdk/src",
    "packages/humanoid-robot-contract-tests/src",
    "packages/humanoid-robot-adapters-unitree-g1/src",
    "packages/humanoid-robot-adapters-asr-whisper/src",
    "packages/humanoid-robot-adapters-tts-piper/src",
    "packages/humanoid-robot-adapters-vad-silero/src",
    "packages/humanoid-robot-adapters-wakeword-openwakeword/src",
    "packages/humanoid-robot-adapters-audio-alsa/src",
    "packages/humanoid-robot-adapters-audio-null/src",
    "packages/humanoid-robot-adapters-llm-llamacpp/src",
    "packages/humanoid-robot-adapters-embed-bge/src",
    "packages/humanoid-robot-adapters-rerank-bge/src",
    "packages/humanoid-robot-adapters-vector-qdrant/src",
    "packages/humanoid-robot-adapters-parser-basic/src",
    "packages/humanoid-robot-adapters-parser-docling/src",
    "packages/humanoid-robot-adapters-chunker-token/src",
    "apps/core/src",
    "apps/robot-adapter/src",
    "apps/voice/src",
    "apps/rag/src",
    "apps/ingest/src",
    "plugins/hello/src",
]
exclude = [
    "^\\.venv/",
    "^build/",
    "^dist/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Third-party libs with partial or missing type stubs — accepted as untyped
# at their boundary; adapters wrap them behind a typed port.
[[tool.mypy.overrides]]
module = [
    "nats.*",
    "numpy",
    "onnxruntime",
    "piper.*",
    "faster_whisper",
    "silero_vad",
    "openwakeword.*",
    "FlagEmbedding",
    "qdrant_client",
    "qdrant_client.*",
    "docling",
    "docling.*",
    "torch",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ---------------------------------------------------------------------------
# pytest — asyncio auto, coverage, parallelism-friendly defaults.
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
# `importlib` mode lets us have multiple `tests/` directories across workspace
# members without inserting them into `sys.path` — collisions like
# `packages/a/tests/test_x.py` vs `packages/b/tests/test_x.py` become fine.
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--import-mode=importlib",
]
testpaths = ["packages", "apps", "plugins"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: fast, isolated unit tests (default)",
    "integration: touches real infrastructure (NATS, Qdrant, filesystem)",
    "hardware: requires physical robot / audio hardware",
    "slow: takes > 1 second",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
]

[tool.coverage.run]
source = ["packages", "apps"]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]

# ---------------------------------------------------------------------------
# Import-Linter — enforces the Clean Architecture dependency rule.
# ---------------------------------------------------------------------------

[tool.importlinter]
root_packages = ["humanoid_robot"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Domain has no infrastructure dependencies"
type = "forbidden"
source_modules = ["humanoid_robot.domain"]
forbidden_modules = [
    "humanoid_robot.adapters",
    "fastapi",
    "starlette",
    "sqlalchemy",
    "qdrant_client",
    "nats",
]

[[tool.importlinter.contracts]]
name = "Ports depend only on domain"
type = "forbidden"
source_modules = ["humanoid_robot.ports"]
forbidden_modules = [
    "humanoid_robot.adapters",
    "humanoid_robot.application",
    "fastapi",
    "starlette",
]

[[tool.importlinter.contracts]]
name = "Events depend only on stdlib + pydantic"
type = "forbidden"
source_modules = ["humanoid_robot.events"]
forbidden_modules = [
    "humanoid_robot.adapters",
    "humanoid_robot.application",
    "humanoid_robot.ports",
    "fastapi",
    "starlette",
]

# ---------------------------------------------------------------------------
# Commitizen — conventional commits + semver.
# ---------------------------------------------------------------------------

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
tag_format = "v$version"
version_scheme = "semver"
version_files = [
    "pyproject.toml:^version",
]
update_changelog_on_bump = true
