[project]
name = "humanoid-robot-ingest"
version = "0.0.0"
description = "cortex-ingest — batch parses documents, chunks them, embeds, and upserts into the vector store."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "typer>=0.15",
    "PyYAML>=6.0",
    "humanoid-robot-domain",
    "humanoid-robot-events",
    "humanoid-robot-ports",
    "humanoid-robot-observability",
    "humanoid-robot-adapters-parser-basic",
    "humanoid-robot-adapters-chunker-token",
    "humanoid-robot-adapters-embed-bge",
    "humanoid-robot-adapters-vector-qdrant",
]

[tool.uv.sources]
humanoid-robot-domain = { workspace = true }
humanoid-robot-events = { workspace = true }
humanoid-robot-ports = { workspace = true }
humanoid-robot-observability = { workspace = true }
humanoid-robot-adapters-parser-basic = { workspace = true }
humanoid-robot-adapters-chunker-token = { workspace = true }
humanoid-robot-adapters-embed-bge = { workspace = true }
humanoid-robot-adapters-vector-qdrant = { workspace = true }

[project.scripts]
cortex-ingest = "humanoid_robot.ingest.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/humanoid_robot"]
