[project]
name = "humanoid-robot-presence"
version = "0.0.0"
description = "cortex-presence — camera-based visitor detection: polls the camera bridge, publishes visitor.detected on the bus."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.9",
    "httpx>=0.27",
    "numpy>=1.26",
    "pillow>=10.4",
    "humanoid-robot-domain",
    "humanoid-robot-events",
    "humanoid-robot-ports",
    "humanoid-robot-observability",
    "humanoid-robot-adapters-nats",
]

[tool.uv.sources]
humanoid-robot-domain = { workspace = true }
humanoid-robot-events = { workspace = true }
humanoid-robot-ports = { workspace = true }
humanoid-robot-observability = { workspace = true }
humanoid-robot-adapters-nats = { workspace = true }

[project.scripts]
cortex-presence = "humanoid_robot.presence.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/humanoid_robot"]
