[project]
name = "humanoid-robot-robot-adapter"
version = "0.0.0"
description = "Runner app that loads a robot adapter and publishes it on the event bus."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "typer>=0.15",
    "PyYAML>=6.0",
    "humanoid-robot-domain",
    "humanoid-robot-events",
    "humanoid-robot-ports",
    "humanoid-robot-plugins-sdk",
    "humanoid-robot-adapters-nats",
    "humanoid-robot-observability",
    # G1 adapter shipped in the default runner. Additional adapters can be
    # installed alongside — the registry picks them up automatically.
    "humanoid-robot-adapters-unitree-g1",
]

[tool.uv.sources]
humanoid-robot-domain = { workspace = true }
humanoid-robot-events = { workspace = true }
humanoid-robot-ports = { workspace = true }
humanoid-robot-plugins-sdk = { workspace = true }
humanoid-robot-adapters-nats = { workspace = true }
humanoid-robot-observability = { workspace = true }
humanoid-robot-adapters-unitree-g1 = { workspace = true }

[project.scripts]
cortex-robot-adapter = "humanoid_robot.robot_adapter_app.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/humanoid_robot"]
