[project]
name = "humanoid-robot-voice"
version = "0.0.0"
description = "cortex-voice — orchestrates the voice pipeline over the event bus."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "typer>=0.15",
    "PyYAML>=6.0",
    "humanoid-robot-domain",
    "humanoid-robot-events",
    "humanoid-robot-ports",
    "humanoid-robot-adapters-nats",
    "humanoid-robot-observability",
    # Adapter distributions the CLI can compose. Real installation is
    # opt-in per-target — dev laptops still get the code path exercised
    # through injected fakes.
    "humanoid-robot-adapters-audio-alsa",
    "humanoid-robot-adapters-asr-whisper",
    "humanoid-robot-adapters-tts-piper",
    "humanoid-robot-adapters-vad-silero",
    "humanoid-robot-adapters-wakeword-openwakeword",
]

[tool.uv.sources]
humanoid-robot-domain = { workspace = true }
humanoid-robot-events = { workspace = true }
humanoid-robot-ports = { workspace = true }
humanoid-robot-adapters-nats = { workspace = true }
humanoid-robot-observability = { workspace = true }
humanoid-robot-adapters-audio-alsa = { workspace = true }
humanoid-robot-adapters-asr-whisper = { workspace = true }
humanoid-robot-adapters-tts-piper = { workspace = true }
humanoid-robot-adapters-vad-silero = { workspace = true }
humanoid-robot-adapters-wakeword-openwakeword = { workspace = true }

[project.scripts]
cortex-voice = "humanoid_robot.voice.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/humanoid_robot"]
