[project]
name = "humanoid-robot-wall-agent"
version = "0.0.0"
description = "cortex-wall-agent — control agent for the presentation video wall (MinTrans app): HTTP API + input-emulation / simulator drivers."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.9",
    "humanoid-robot-domain",
]

[tool.uv.sources]
humanoid-robot-domain = { workspace = true }

[project.scripts]
cortex-wall-agent = "humanoid_robot.wall_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/humanoid_robot"]
