[project]
name = "humanoid-robot-plugins-hello"
version = "0.0.0"
description = "Reference first-party plugin — logs on every asr.final event."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.9",
    "humanoid-robot-domain",
    "humanoid-robot-events",
    "humanoid-robot-ports",
    "humanoid-robot-observability",
    "humanoid-robot-plugins-sdk",
]

[tool.uv.sources]
humanoid-robot-domain = { workspace = true }
humanoid-robot-events = { workspace = true }
humanoid-robot-ports = { workspace = true }
humanoid-robot-observability = { workspace = true }
humanoid-robot-plugins-sdk = { workspace = true }

[project.entry-points."humanoid_robot.plugins"]
hello = "humanoid_robot.plugins.hello.plugin:build_hello_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/humanoid_robot"]
